<resources>
    <string name="app_name">FitPal</string>
    <string name="app_name_up">FITPAL</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registro">REGISTRO</string>
    <string name="login">INICIAR SESION</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Hints formularios-->
    <string name="correo">Correo electronico</string>
    <string name="pass">Contraseña</string>
    <string name="vpass">Repita su contraseña</string>
    <string name="usuario">Nombre de usuario</string>
    <string name="desc">Descripcion</string>
    <string name="desc_help">Describe brevemente quien eres, lo que te gusta hacer.</string>
    <string name="terminos">Acepto terminos y condiciones.</string>
    <string name="cuenta_existe">¿Ya tienes cuenta? Inicia Sesion</string>
    <string name="nueva_cuenta">¿No tienes cuenta? Registrate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Nombre de usuario</string>
    <string name="name">Nombre/s</string>
    <string name="last_name">Apellido/s</string>
    <string name="bio">Biografia</string>
    <string name="completar_registro">CREAR PERFIL</string>
    <string name="profile_pic">Foto de perfil</string>
    <string name="evento">Evento</string>
    <string name="deporte">Deporte</string>
    <string name="organizador">Organizador</string>
    <string name="descripci_n_del_evento">Descripción del evento</string>
    <string name="asistentes">Asistentes</string>
    <string name="fecha">Fecha</string>
    <string name="duracion">Duracion</string>
    <string name="registroValue">¿Eres nuevo? Registrate aquí</string>

</resources>