<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/league_gothic"
        android:text="@string/login"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.432" />

    <!--<Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MAPA TEST"
        tools:ignore="MissingConstraints" />-->

    <LinearLayout
        android:id="@+id/linearLayout_login"
        android:layout_width="match_parent"
        android:layout_height="460dp"
        android:background="?attr/colorPrimary"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:padding="32dp"
        android:gravity="top|center">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_correo_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:hint="@string/correo"
            app:endIconMode="clear_text"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_correo_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@id/et_pass"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_pass_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:hint="@string/pass"
            android:paddingTop="@dimen/common_padding_default"
            app:endIconMode="password_toggle"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pass_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        }


        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_register_a"
            android:layout_width="wrap_content"
            android:layout_height="64dp"
            android:paddingTop="@dimen/common_padding_default"
            android:text="Iniciar Sesion"
            android:textColor="?attr/colorPrimary"
            app:backgroundTint="?attr/buttonTint"
            app:icon="@drawable/ic_baseline_send_24"
            app:iconGravity="end"
            app:iconTint="?attr/colorPrimary"></com.google.android.material.button.MaterialButton>

        <TextView
            android:id="@+id/textView_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/common_padding_default"
            android:text="@string/registroValue"
            android:textAlignment="center" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView_login"
        android:layout_width="233dp"
        android:layout_height="107dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.408"
        app:srcCompat="@drawable/ic_logo_fitpal" />

</androidx.constraintlayout.widget.ConstraintLayout>